--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -22,9 +22,10 @@
         </mat-form-field>
 
         <div class="flex-c-c gap-32">
-            <button class="login-btn" mat-raised-button><mat-icon>how_to_reg</mat-icon>Register</button>
+            <button class="login-btn" mat-raised-button>
+                <mat-icon>how_to_reg</mat-icon>Register
+            </button>
             <app-snackbars></app-snackbars>
         </div>
-
     </div>
 </section>
