add the register form, got issue with further snack barmessage

--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
         </mat-form-field>
 
         <div class="flex-c-c gap-32">
-            <button class="login-btn" mat-raised-button>
+            <button class="login-btn" mat-raised-button (click)="openDialog()">
                 <mat-icon>how_to_reg</mat-icon>Register
             </button>
             <app-snackbars></app-snackbars>
