--- a/kanban-frondend/src/app/components/snackbars/snackbars.component.html
+++ b/kanban-frondend/src/app/components/snackbars/snackbars.component.html
@@ -1,4 +1,4 @@
-<button class="login-btn" mat-raised-button (click)="openSnackBar('Login erfolgreich!')">
+<!-- snackbars.component.html -->
+<button class="login-btn" mat-raised-button (click)="openSnackBar('Login successful!')">
     <mat-icon>login</mat-icon>Login
 </button>
-  
