--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -23,9 +23,12 @@
 
         <div class="flex-c-c gap-32">
             <button class="login-btn" mat-raised-button (click)="openDialog()">
-                <mat-icon>how_to_reg</mat-icon>Register
+              <mat-icon>how_to_reg</mat-icon>Register
             </button>
-            <app-snackbars></app-snackbars>
+            <button class="login-btn" mat-raised-button (click)="login()">
+                <mat-icon>login</mat-icon>Login
+            </button>
         </div>
+      
     </div>
 </section>
