--- a/kanban-frondend/src/styles.scss
+++ b/kanban-frondend/src/styles.scss
@@ -46,6 +46,10 @@ mat-drawer-content {
     overflow-x: hidden !important
 }
 
+mat-card{
+    box-shadow: none !important;
+}
+
 /*
 ### COMMON STYLES
 */
