--- a/kanban-frondend/src/app/components/dialog-register/dialog-register.component.html
+++ b/kanban-frondend/src/app/components/dialog-register/dialog-register.component.html
@@ -19,6 +19,10 @@
 </mat-dialog-content>
 
 <mat-dialog-actions class="register-btn-container">
-  <button class="login-btn register" mat-button mat-dialog-close><mat-icon>close</mat-icon>Cancel</button>
-  <button class="login-btn register" mat-button mat-dialog-close cdkFocusInitial><mat-icon>how_to_reg</mat-icon>Register</button>
+  <button class="login-btn" mat-button mat-dialog-close>
+    <mat-icon>close</mat-icon>Cancel
+  </button>
+  <button class="login-btn" mat-button (click)="register()">
+    <mat-icon>check</mat-icon>Register
+  </button>
 </mat-dialog-actions>
